# synth-vst3

./: Cargo.toml  README.md  bundler.toml
src/: envelope.rs  lib.rs
