[package]
name = "synth"
version = "0.1.0"
edition = "2021"
authors = ["Deepankar Bajpeyi <dbajpeyi@gmail.com>"]
license = "GPL-3.0-or-later"
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "A short description of your plugin"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
libm = "0.2.6"
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
num-traits = "0.2.15"
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }
rand = "0.8.5"
rand_pcg = "0.3.1"
strum = "0.24"
strum_macros = "0.24"
core_simd = { git = "https://github.com/rust-lang/portable-simd" }
va-filter = {git = "https://github.com/Fredemus/va-filter.git"}
std_float = { git = "https://github.com/rust-lang/portable-simd" }
# synfx-dsp = "0.5.5"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
# debug = true
strip = "none"
